test cpu module....

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,13 +1,16 @@
 ADD_SUBDIRECTORY(modules)
 #------------common-----------------
 SET(COMMON_SRC common.cpp)
-ADD_LIBRARY(common STATIC ${COMMON_SRC})
-SET_TARGET_PROPERTIES(common PROPERTIES OUTPUT_NAME "common")
+ADD_LIBRARY(common_static STATIC ${COMMON_SRC})
+ADD_LIBRARY(common_shared SHARED ${COMMON_SRC})
+SET_TARGET_PROPERTIES(common_static PROPERTIES OUTPUT_NAME "common")
+SET_TARGET_PROPERTIES(common_shared PROPERTIES OUTPUT_NAME "common")
 
 #------------config-----------------
 SET(CONFIG_SRC config.cpp)
 ADD_LIBRARY(config_static STATIC ${CONFIG_SRC})
 ADD_LIBRARY(config_shared SHARED ${CONFIG_SRC})
+#TARGET_LINK_LIBRARIES(config_static common_static)
 SET_TARGET_PROPERTIES(config_static PROPERTIES OUTPUT_NAME "config")
 SET_TARGET_PROPERTIES(config_shared PROPERTIES OUTPUT_NAME "config")
 
@@ -23,7 +26,7 @@ SET_TARGET_PROPERTIES(modmgr_shared PROPERTIES OUTPUT_NAME "modmgr")
 SET(ZEBRA_SRC zebra.cpp)
 ADD_EXECUTABLE(zebra ${ZEBRA_SRC})
 LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/src)
-TARGET_LINK_LIBRARIES(zebra config_static modmgr_static)
+TARGET_LINK_LIBRARIES(zebra modmgr_static common_static config_static common_static)
 SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
 
 
