--- a/src/modules/CMakeLists.txt
+++ b/src/modules/CMakeLists.txt
@@ -21,6 +21,12 @@ ADD_LIBRARY(module_traffic_shared SHARED ${MODULE_TRAFFIC_SRC})
 SET_TARGET_PROPERTIES(module_traffic_static PROPERTIES OUTPUT_NAME "module_traffic")
 SET_TARGET_PROPERTIES(module_traffic_shared PROPERTIES OUTPUT_NAME "module_traffic")
 
+#----------------disk---------------------------
+SET(MODULE_DISK_SRC module_disk.cpp)
+ADD_LIBRARY(module_disk_static STATIC ${MODULE_DISK_SRC})
+ADD_LIBRARY(module_disk_shared SHARED ${MODULE_DISK_SRC})
+SET_TARGET_PROPERTIES(module_disk_static PROPERTIES OUTPUT_NAME "module_disk")
+SET_TARGET_PROPERTIES(module_disk_shared PROPERTIES OUTPUT_NAME "module_disk")
 
 
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/modules)
