--- a/src/zebra.conf
+++ b/src/zebra.conf
@@ -11,7 +11,7 @@ output_interface db
 output_file_path /root/zebra.data
 
 #where name = encode_qd_23
-output_db_index name; 
+output_db_index name 
 output_db_key encode_qd_23
 output_db_modules  all
 output_db_addr 127.0.0.1
