test for connecting mysql...

--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -9,7 +9,7 @@ module_process enable
 interval 10
 output_interface db
 
-output_file_path /root/zebra.data
+output_file_path /var/log/zebra.data
 
 output_db_index name 
 output_db_key encode_qd_23
@@ -25,4 +25,6 @@ output_url www.162.com
 
 processes mysqld,,nginx,
 
-modules_path = "/usr/bin/zebra"
+#暂时不用这个参数
+#modules_path  "/usr/bin/zebra"
+#modules_path  "/root/git/zebra/build/modules/"
