test for mysql....

--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -14,12 +14,12 @@ output_file_path /var/log/zebra.data
 output_db_index name 
 output_db_key encode_qd_23
 output_db_modules  all
-output_db_addr 127.0.0.1
+output_db_addr 122.11.33.175
 output_db_port 3306
 output_db_name zebra
 output_db_user report
 output_db_passwd 1234Qwerx
-output_db_tablename hardware
+output_db_tablename machineInfo
 
 output_url www.162.com
 
