--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -9,7 +9,6 @@ module_process enable
 interval 10
 output_interface db
 
-output_file_path /var/log/zebra.data
 
 output_db_index name 
 output_db_key encode_qd_23
@@ -17,9 +16,9 @@ output_db_modules  all
 output_db_addr 192.168.253.128
 output_db_port 3306
 output_db_name zebra
-output_db_user report
+output_db_user zreportor
 output_db_passwd 1234Qwerx
-output_db_tablename machineInfo
+output_db_tablename hardware
 
 output_url www.162.com
 
