add conf comment

--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -9,21 +9,24 @@ module_process enable
 interval 10
 output_interface db
 
-
+#以下两个参数实现where子句
+#例如：where name = xxxxxx
 output_db_index name 
-output_db_key encode_qd_23
+output_db_key xxxxxx
 output_db_modules  all
-output_db_addr 192.168.253.128
+#数据库ip地址
+output_db_addr xxx.xxx.xxx.xxx
 output_db_port 3306
 output_db_name zebra
 output_db_user zreportor
 output_db_passwd 1234Qwerx
 output_db_tablename hardware
 
-output_url www.162.com
+#此种方式暂不使用
+output_url www.163.com
 
-processes mysqld,,nginx,
+processes mysqld,nginx,
 
-#暂时不用这个参数
+#暂时不用这个参数 这中参数一般都是固定的
 #modules_path  "/usr/bin/zebra"
 #modules_path  "/root/git/zebra/build/modules/"
