--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -25,7 +25,7 @@ output_db_tablename hardware
 #此种方式暂不使用
 output_url www.163.com
 
-processes mysqld,nginx,
+processes mysqld
 
 #暂时不用这个参数 这中参数一般都是固定的
 #modules_path  "/usr/bin/zebra"
