--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -15,7 +15,7 @@ output_db_index name
 output_db_key xxxxxx
 output_db_modules  all
 #数据库ip地址
-output_db_addr xxx.xxx.xxx.xxx
+output_db_addr 122.11.33.16
 output_db_port 3306
 output_db_name zebra
 output_db_user zreportor
@@ -25,7 +25,7 @@ output_db_tablename hardware
 #此种方式暂不使用
 output_url www.163.com
 
-processes mysqld
+processes java
 
 #暂时不用这个参数 这中参数一般都是固定的
 #modules_path  "/usr/bin/zebra"
