--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -5,14 +5,14 @@ module_mem on
 module_traffic	on
 module_disk enable
 module_process enable
+module_load on
 
 interval 10
 output_interface db
 
 #以下两个参数实现where子句
-#例如：where name = xxxxxx
+#例如：where name = ip
 output_db_index name 
-output_db_key xxxxxx
 output_db_modules  all
 #数据库ip地址
 output_db_addr 122.11.33.16
