--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -10,7 +10,7 @@ SET_TARGET_PROPERTIES(common_shared PROPERTIES OUTPUT_NAME "common")
 SET(CONFIG_SRC config.cpp)
 ADD_LIBRARY(config_static STATIC ${CONFIG_SRC})
 ADD_LIBRARY(config_shared SHARED ${CONFIG_SRC})
-#TARGET_LINK_LIBRARIES(config_static common_static)
+TARGET_LINK_LIBRARIES(config_static ifaddr_static)
 SET_TARGET_PROPERTIES(config_static PROPERTIES OUTPUT_NAME "config")
 SET_TARGET_PROPERTIES(config_shared PROPERTIES OUTPUT_NAME "config")
 
@@ -18,7 +18,7 @@ SET_TARGET_PROPERTIES(config_shared PROPERTIES OUTPUT_NAME "config")
 SET(MODMGR_SRC modmgr.cpp)
 ADD_LIBRARY(modmgr_static STATIC ${MODMGR_SRC})
 ADD_LIBRARY(modmgr_shared SHARED ${MODMGR_SRC})
-TARGET_LINK_LIBRARIES(modmgr_static dl)
+TARGET_LINK_LIBRARIES(modmgr_static dl ifaddr_static)
 SET_TARGET_PROPERTIES(modmgr_static PROPERTIES OUTPUT_NAME "modmgr")
 SET_TARGET_PROPERTIES(modmgr_shared PROPERTIES OUTPUT_NAME "modmgr")
 
@@ -30,6 +30,14 @@ TARGET_LINK_LIBRARIES(mysqlconn_static mysqlclient)
 SET_TARGET_PROPERTIES(mysqlconn_static PROPERTIES OUTPUT_NAME "mysqlconn")
 SET_TARGET_PROPERTIES(mysqlconn_shared PROPERTIES OUTPUT_NAME "mysqlconn")
 LINK_DIRECTORIES(/usr/lib64/mysql)
+
+#-------------getIP-----------
+SET(IFADDR_SRC ifaddr.cpp)
+ADD_LIBRARY(ifaddr_static STATIC ${IFADDR_SRC})
+ADD_LIBRARY(ifaddr_shared SHARED ${IFADDR_SRC})
+SET_TARGET_PROPERTIES(ifaddr_static PROPERTIES OUTPUT_NAME "ifaddr")
+SET_TARGET_PROPERTIES(ifaddr_shared PROPERTIES OUTPUT_NAME "ifaddr")
+
 
 #-------------zebra-------------------
 SET(ZEBRA_SRC zebra.cpp)
