fix sql sentencse

--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -12,7 +12,6 @@ output_interface db
 
 #以下两个参数实现where子句
 #例如：where name = ip
-output_db_index name 
 output_db_modules  all
 #数据库ip地址
 output_db_addr 122.11.33.16
@@ -25,8 +24,8 @@ output_db_tablename hardware
 #此种方式暂不使用
 output_url www.163.com
 
+#监控的进程
 processes java
-
 #暂时不用这个参数 这中参数一般都是固定的
 #modules_path  "/usr/bin/zebra"
 #modules_path  "/root/git/zebra/build/modules/"
