--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -24,7 +24,7 @@ output_db_tablename hardware
 #此种方式暂不使用
 output_url www.163.com
 
-#监控的进程
+#监控的进程,目前从数据库中读取的
 processes java
 #暂时不用这个参数 这中参数一般都是固定的
 #modules_path  "/usr/bin/zebra"
