--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -8,7 +8,7 @@ module_process enable
 module_load on
 
 interval 10
-output_interface db
+output_interface url
 
 #以下两个参数实现where子句
 #例如：where name = ip
@@ -22,7 +22,7 @@ output_db_passwd 1234Qwerx
 output_db_tablename hardware
 
 #此种方式暂不使用
-output_url www.163.com
+output_url http://data.ku6.com/api/machine/monitor_update
 
 #监控的进程,目前从数据库中读取的
 processes java
