--- a/conf/zebra.conf
+++ b/conf/zebra.conf
@@ -21,8 +21,8 @@ output_db_user zreportor
 output_db_passwd 1234Qwerx
 output_db_tablename hardware
 
-#此种方式暂不使用
-output_url http://data.ku6.com/api/machine/monitor_update
+#使用此种办法
+output_url http://122.11.33.188:5678/monitor/hardware
 
 #监控的进程,目前从数据库中读取的
 processes java
